# TICS

./: .gitignore  README.md  build.sh  clean.sh  setup.sh
tics/: .gitignore  CMakeLists.txt  LICENSE  LLVMCompile.cmake  README.md  configure  maxstack.sh
tics/arch/msp430x/: CMakeLists.txt  arch.h  checkpoint_arch.h  checkpoint_ctrl.h  checkpoint_data.c  checkpoint_data.h  checkpoint_registers.c  checkpoint_registers.h  checkpoint_stack.c  checkpoint_stack.h  checkpoint_timer.c  checkpoint_timer.h  critical.h  debug_arch.h  dma.c  dma.h  msp430-toolchain-ws.cmake  msp430-toolchain.cmake  msp430fr5969.ld  msp430fr5994.ld  stack.h  workingstack.c  workingstack.h  workingstack_asm.S  workingstack_asm_small.S  workingstack_nv_asm_small.S
tics/arch/msp430x/lib/MSP430FR5xx_6xx/: adc12_b.c  adc12_b.h  aes256.c  aes256.h  comp_e.c  comp_e.h  crc32.c  crc32.h  cs.c  cs.h  driverlib.h  esi.c  esi.h  eusci_a_spi.c  eusci_a_spi.h  eusci_a_uart.c  eusci_a_uart.h  eusci_b_i2c.c  eusci_b_i2c.h  eusci_b_spi.c  eusci_b_spi.h  framctl.c  framctl.h  framctl_a.c  framctl_a.h  gpio.c  gpio.h  hspll.c  hspll.h  mpu.c  mpu.h  mtif.c  mtif.h  pmm.c  pmm.h  ram.c  ram.h  ref_a.c  ref_a.h  rtc_b.h  (+14 more)
tics/arch/msp430x/lib/MSP430FR5xx_6xx/inc/: hw_memmap.h  version.h
tics/arch/msp430x/llvm-workaround/: README.txt  checkpoint_restore_registers.c
tics/ext/: CMakeLists.txt
tics/ext/libio/: README
tics/ext/libio/bld/: .gitignore  Makefile
tics/ext/libio/bld/ticl/: Makefile
tics/ext/libio/src/include/libio/: log.h  printf.h
tics/ext/libmsp/: README
tics/ext/libmsp/bld/: .gitignore  Makefile  Makefile.config  Makefile.defaults
tics/ext/libmsp/bld/clang/: Makefile
tics/ext/libmsp/bld/ticl/: Makefile
tics/ext/libmsp/src/: clock.c  mem.c  rand.c  watchdog.c
tics/ext/libmsp/src/include/libmsp/: clock.h  gpio.h  mem.h  periph.h  rand.h  watchdog.h
tics/ext/libmsp/src/mspware/: pmm.c  pmm.h
tics/ext/libmsp/src/mspware/inc/: hw_memmap.h
tics/ext/libmspbuiltins/: README
tics/ext/libmspbuiltins/bld/: Makefile  Makefile.target
tics/ext/libmspbuiltins/bld/ticl/: Makefile
tics/ext/libmspbuiltins/src/: builtins.S  builtins.asm
tics/ext/libmspbuiltins/src/include/libmspbuiltins/: builtins.h
tics/ext/libmspconsole/: README
tics/ext/libmspconsole/bld/: .gitignore  Makefile  Makefile.target
tics/ext/libmspconsole/bld/clang/: Makefile
tics/ext/libmspconsole/bld/ticl/: Makefile
tics/ext/libmspconsole/src/: io.c
tics/ext/libmspconsole/src/include/libmspconsole/: printf.h
tics/ext/libmspmath/: README
tics/ext/libmspmath/bld/: .gitignore  Makefile
tics/ext/libmspmath/src/: mult.c  sqrt.c
tics/ext/libmspmath/src/include/libmspmath/: msp-math.h
tics/ext/libmspprintf/: README
tics/ext/libmspprintf/bld/: Makefile  Makefile.target
tics/ext/libmspprintf/bld/ticl/: Makefile  __Makefile
tics/ext/libmspprintf/src/: printf.c
tics/ext/libwispbase/bld/: Makefile  Makefile.target
tics/ext/libwispbase/bld/clang/: Makefile  libwispbase.a.bc
tics/ext/libwispbase/bld/clang/Math/: crc16_LUT.bc  crc16_LUT.d
tics/ext/libwispbase/bld/clang/RFID/: interface.bc  interface.d
tics/ext/libwispbase/bld/clang/Sensors/: accel.bc  accel.d
tics/ext/libwispbase/bld/clang/Timing/: timer.bc  timer.d
tics/ext/libwispbase/bld/clang/internals/: wisp-init.bc  wisp-init.d
tics/ext/libwispbase/bld/clang/nvm/: fram.bc  fram.d
tics/ext/libwispbase/bld/clang/rand/: rand.bc  rand.d
tics/ext/libwispbase/bld/clang/wired/: spi.bc  spi.d  uart.bc  uart.d  uart.ll
tics/ext/libwispbase/bld/gcc/: .gitignore  Makefile
tics/ext/libwispbase/bld/ticl/: Makefile
tics/ext/libwispbase/src/RFID/: Timer0A0_ISR.asm  interface.c  rfid_BlockWriteHandle.asm  rfid_Handles.asm
tics/ext/libwispbase/src/Sensors/: accel.c
tics/ext/libwispbase/src/Timing/: timer.c
tics/ext/libwispbase/src/include/libwispbase/: accel.h  (+8 more)
tics/ext/libwispbase/src/internals/: wisp-init.c
tics/ext/libwispbase/src/nvm/: fram.c
tics/ext/libwispbase/src/rand/: rand.c
tics/ext/libwispbase/src/wired/: spi.c  uart.c
tics/include/: checkpoint.h  config.h  intervaltree.h  jump.h  stackarray.h  timevar.h  virtualmem.h
tics/include/util/: debug.h
tics/source-instrumentation/: .gitignore
tics/source-instrumentation/memory-log-instrumentation/: CMakeLists.txt  memlog.cpp  runtest.sh
tics/source-instrumentation/memory-log-instrumentation/test/: activity-instr.c  activity.c  array-instr.c  array.c  compound_assign-instr.c  compound_assign.c  cuckoo-instr.c  cuckoo.c  global_struct-instr.c  global_struct.c  prepostincr-instr.c  prepostincr.c  struct_ref-instr.c  struct_ref.c
tics/source-instrumentation/time-instrumentation/: README.txt  runtest.sh  timely-instrument.py  timely.h
tics/source-instrumentation/time-instrumentation/test/: timely_assign-instr.c  timely_assign.c  timely_complete-instr.c  timely_complete.c  timely_expires-instr.c  timely_expires.c  timely_expires_catch-instr.c  timely_expires_catch.c  timely_timely-instr.c  timely_timely.c
tics/src/: CMakeLists.txt  checkpoint.c  main.c  stackarray.c  virtualmem.c
tics/test/functional/: CMakeLists.txt  ftest_util.c  ftest_util.h
tics/test/functional/checkpoint/: ftest_benchmark_checkpoint.c  ftest_checkpoint.c  ftest_component_overhead.c  ftest_crc_checkpoint.c  ftest_jump.c  ftest_virtualaddr.c  ftest_virtualmem.c  ftest_workingstack.c  ftest_workingstack_vmem.c
tics/test/functional/checkpoint/activity/: activity-instr.c  activity-orig.c  activity.c
tics/test/functional/checkpoint/bitcount/: bitcount-instr.c  bitcount-orig.c  bitcount-powercast.c  bitcount-stacksizetrace.c  bitcount.c
tics/test/functional/checkpoint/cuckoo/: cuckoo-less-ptr.c  cuckoo-orig.c  cuckoo.c  cuckoo.h
tics/test/functional/checkpoint/greenh-temp/: adc.h  greenh_temp-instr.c  greenh_temp.c
tics/test/functional/checkpoint/greenh-temp-time/: adc.h  greenh_temp_time-instr.c  greenh_temp_time.c
tics/test/functional/checkpoint/greenh-temp-tinyos/: greenh_temp_tinyos-instr.c  greenh_temp_tinyos.c
tics/test/functional/checkpoint/tinyos-temp/: tinyos_temp-orig.c  tinyos_temp.c
(+68 files in other folders)
